[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-recursion = "1.0.4"
csv = "1.2.1"
itertools = "0.10.5"
reqwest = { version = "0.11.16", features = ["json"] }
select = "0.6.0"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
